test_suite/tests/ui/default-attribute/enum_path.stderr
error: #[serde(default = "...")] can only be used on structs with named fields
 --> $DIR/tests/ui/default-attribute/enum_path.rs:5:1
  |
5 | enum E {
  | ^^^^
