test_suite/tests/ui/default-attribute/enum_path.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
#[serde(default = "default_e")]
enum E {
    S { f: u8 },
}

fn main() {}
